--- a/src/app/acumulador/acumulador.component.html
+++ b/src/app/acumulador/acumulador.component.html
@@ -1,1 +1,12 @@
-<p>acumulador works!</p>
+<h1 class="text-center">{{title}}</h1>
+
+<div class="centrado">
+  <h2>{{numero}}</h2>
+</div>
+<div class="centrado">
+  <button (click)="duplicar()">Duplicar</button>
+  <button (click)="triplicar()">Triplicar</button>
+  <button (click)="reiniciar()">Reiniciar</button>
+</div>
+
+
