--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-acumulador></app-acumulador>
+<!-- <app-acumulador></app-acumulador>
+ <app-listar-empleados></app-listar-empleados>
+<app-empleado></app-empleado> -->
+
+<app-pagina-inicio></app-pagina-inicio>
