--- a/src/app/empleados/empleado/empleado.component.html
+++ b/src/app/empleados/empleado/empleado.component.html
@@ -1,1 +1,10 @@
 <p>empleado works!</p>
+
+
+<div class="col-6">
+  <app-listar-empleados [empleados]="empleadoAntiguo" [titulo]="tituloAntiguo"></app-listar-empleados>
+</div>
+<div class="col-6">
+  <app-listar-empleados [empleados]="empleadosNuevos" [titulo]="tituloNuevo"></app-listar-empleados>
+
+</div>
