--- a/src/app/empleados/listar-empleados/listar-empleados.component.html
+++ b/src/app/empleados/listar-empleados/listar-empleados.component.html
@@ -1,1 +1,21 @@
-<p>listar-empleados works!</p>
+<h1>{{titulo}}</h1>
+
+<ul>
+  <button (click)="borrar()"> Borrar</button>
+  <div *ngIf="etiquetaBorrar; else noBorrado">
+    <h3 >Empleado Borrado</h3>
+    <span>{{etiquetaBorrar}}</span>
+  </div>
+  <ng-template #noBorrado>
+    <h4>No se borro ningun empleado</h4>
+  </ng-template>
+
+
+  <li *ngFor="let empleado of empleados">
+    <h2>{{empleado.nombres | titlecase}} {{empleado.apellidos | titlecase}}</h2>
+    <h3>Direccion: {{empleado.direccion | uppercase}}</h3>
+    <h3>Sueldo: {{empleado.sueldo | currency}}</h3>
+
+    <hr>
+  </li>
+</ul>
