--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+button{
+  background-color: lawngreen;
+  border-radius: 5px;
+  border: 0px;
+  color: antiquewhite;
+  cursor: pointer;
+  margin-right: 5px;
+  margin-left: 5px;
+  padding: 5px 10px;
+  }
